# bitwise-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
mcp_embedded_docs/: __main__.py  server.py
mcp_embedded_docs/indexing/: metadata_store.py
mcp_embedded_docs/ingestion/: chunker.py  pdf_parser.py  st_extractor.py  table_detector.py  table_extractor.py
mcp_embedded_docs/retrieval/: hybrid_search.py
mcp_embedded_docs/tools/: find_register.py  ingest_docs.py  search_docs.py
tests/: test_chunker.py  test_metadata_store_search.py  test_pdf_parser.py  test_st_extractor.py  test_table_detector.py  test_table_extractor.py
