[project]
name = "mcp-embedded-docs"
version = "0.3.0"
description = "MCP server for embedded systems documentation - search registers, memory maps, and datasheets"
authors = [{ name = "Mike A" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "embedded", "documentation", "registers", "datasheet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "mcp>=1.2.0",
    "pydantic>=2.5.0",
    "openai>=1.6.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "numpy>=1.24.0",
]

[project.scripts]
mcp-embedded-docs = "mcp_embedded_docs.__main__:cli"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_embedded_docs"]
